refactor: update assertions in PensionReportServiceTest for clarity and accuracy